// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-sort-button should render disabled sort button 1`] = `
<wpp-sort-button .disabled="true" class="wpp-sort-button" exportparts="button, icon, text, inner">
  <mock:shadow-root>
    <button aria-pressed="false" class="button" data-testid="wppSortButton" part="button" type="button">
      <wpp-icon-sort class="icon" part="icon"></wpp-icon-sort>
      <span class="text" part="text">
        <slot part="inner"></slot>
      </span>
    </button>
  </mock:shadow-root>
</wpp-sort-button>
`;

exports[`wpp-sort-button should render sort button 1`] = `
<wpp-sort-button class="wpp-sort-button" exportparts="button, icon, text, inner">
  <mock:shadow-root>
    <button aria-pressed="false" class="button" data-testid="wppSortButton" part="button" type="button">
      <wpp-icon-sort class="icon" part="icon"></wpp-icon-sort>
      <span class="text" part="text">
        <slot part="inner"></slot>
      </span>
    </button>
  </mock:shadow-root>
</wpp-sort-button>
`;
